--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,8 @@
 
 // Color overrides
 
-// Set a custom color
-$turquoise: #17a2b8 !default;
+// Set a custom color 
+$turquoise: #063970 !default;
 $brown: #5c4d42 !default;
 $black: #000000 !default;
 
