--- a/css/creative.css
+++ b/css/creative.css
@@ -10561,7 +10561,7 @@ html {
 }
 
 .about-picture {
-  background-image: url();
+  background-image: url(../img/headShot.png);
   background-size: cover;
   background-position: center;
   border-radius: 50%;
