--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -7,7 +7,7 @@ html {
 
 // About section
 .about-picture{
-  background-image: url();
+  background-image: url(../img/headShot.png);
   background-size: cover;
   background-position: center;
   border-radius: 50%;
