--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@
 // Color overrides
 
 // Set a custom color
-$turquoise: #063970 !default;
+$turquoise:   #3779be !default;
 $brown: #5c4d42 !default;
 $black: #000000 !default;
 
